# zonu-lazyk

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
.claude/skills/zonu-lazyk-release-prep/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: interp.rs
docs/adr/: 0001-ion-style-combinator-bytecode-vm.md  0002-flat-array-heap-with-cheney-gc.md  0003-extended-combinators-peephole.md  0004-native-integer-church-numerals.md  0005-performance-findings.md  0006-embedding-api.md  0007-embedding-hardening.md  0008-decode-api-for-embedders.md
examples/: embed.rs
src/: compile.rs  io.rs  lib.rs  main.rs  parser.rs  term.rs
src/vm/: gc.rs  heap.rs  mod.rs  reduce.rs
tests/: decode.rs  embed.rs  programs.rs  reference.rs
tests/fixtures/: NOTICE.md
